@@ -21,3 +21,4 @@ call runtest cl self2
 call runtest cl eyal1
 call runtest cl condvar3
 call runtest cl condvar4
+call runtest cl errno1
